<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>HybridPOM</groupId>
	<artifactId>HybridPOM</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Hybrid Framwrk</name>
	<description>Hybrid Framewrk with POM design pattern</description>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<aspectj.version>1.8.10</aspectj.version>
	</properties>


	<build>
		
		<!-- <sourceDirectory>src</sourceDirectory> -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
				<forkcount>3</forkcount>
				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				<reuserForks>true</reuserForks>
					
					<!-- Suite testng xml file to consider for test execution -->
					<suiteXmlFiles>
						<!-- <suiteXmlFile>./src/test/resources/testRunners/testng2.xml</suiteXmlFile> -->
						<suiteXmlFile>./src/test/resources/testRunners/testng_parallel.xml</suiteXmlFile>

						<!-- mvn test -Dsurefire.suiteXmlFiles=src/test/resources/testng.xml -->
						<!-- <suiteXmlFile>suites-test-testng.xml</suiteXmlFile> -->
					</suiteXmlFiles>
					
					<argLine> -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar" </argLine>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
				<dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
			</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<executions>
						<execution>
							<id>attach-source</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			
			<plugin>
			    <artifactId>maven-clean-plugin</artifactId>
			    <version>3.1.0</version>
			    <configuration>
			        <filesets>
			            <fileset>
			                <directory>screenshots</directory>
			                <directory>build</directory> 
			                <directory>allure-results/</directory>
			                <includes>
			                    <include>**/*</include>
			                </includes>
			                <followSymlinks>false</followSymlinks>
			            </fileset>
			        </filesets>
			    </configuration>
			</plugin>


		</plugins>
	</build>


	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.141.59</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>4.0.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.14.3</version>
			<!-- <scope>test</scope> -->
		</dependency>



		<!-- apache POI's ********************************************************************* -->
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.1.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>4.1.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
		<!-- <dependency> <groupId>org.apache.poi</groupId> <artifactId>poi-scratchpad</artifactId> 
			<version>4.1.2</version> </dependency> https://mvnrepository.com/artifact/org.apache.poi/ooxml-schemas 
			<dependency> <groupId>org.apache.poi</groupId> <artifactId>ooxml-schemas</artifactId> 
			<version>1.4</version> </dependency> -->
		<!-- https://mvnrepository.com/artifact/org.apache.poi/openxml4j -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>openxml4j</artifactId>
			<version>1.0-beta</version>
		</dependency>
		<!-- apache POI's ********************************************************************* END-->

		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.1.5</version>
		</dependency>

			<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
		<dependency>
		    <groupId>io.qameta.allure</groupId>
		    <artifactId>allure-testng</artifactId>
		    <version>2.13.3</version>
		</dependency>
			
				
			<!-- *********************Gmail Api's********************************************-->
			<!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client -->
		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client</artifactId>
			<version>1.30.10</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client-jetty -->
		<dependency>
			<groupId>com.google.oauth-client</groupId>
			<artifactId>google-oauth-client-jetty</artifactId>
			<version>1.31.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-gmail -->
		<dependency>
			<groupId>com.google.apis</groupId>
			<artifactId>google-api-services-gmail</artifactId>
			<version>v1-rev110-1.25.0</version>
		</dependency>

	

			
		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
	<!-- 	<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
			<version>1.6.2</version>
		</dependency> -->
	
		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
<dependency>
    <groupId>javax.mail</groupId>
    <artifactId>mail</artifactId>
    <version>1.5.0-b01</version>
</dependency>

			

		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.13.1</version>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>4.3.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured-common -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured-common</artifactId>
			<version>4.3.0</version>
		</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
<dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-core</artifactId>
    <version>2.13.3</version>
</dependency>
	
			
		
			
	</dependencies>
	

	
	
</project>